<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:backgroundTint="@color/colorBackground"
    android:fontFamily="@font/iransans"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewServerAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="monospace"
        android:gravity="fill"
        android:text="0.0.0.0:0"
        android:textAlignment="gravity"
        android:textColor="@color/colorGrayText"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewIconConnection"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPower"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:drawableTop="@drawable/ic_key_power"
        android:fontFamily="@font/iransans"
        android:text="@string/Power"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/buttonReceipt"
        app:layout_constraintEnd_toStartOf="@+id/buttonDevelop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTare" />

    <Button
        android:id="@+id/buttonDevelop"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:alpha="0.6"
        android:drawableTop="@drawable/ic_key_develop"
        android:fontFamily="@font/iransans"
        android:text="@string/Develop"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/buttonReport"
        app:layout_constraintEnd_toStartOf="@+id/buttonConnect"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPower"
        app:layout_constraintTop_toBottomOf="@+id/buttonShow" />

    <Button
        android:id="@+id/buttonReceipt"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:drawableTop="@drawable/ic_key_receipt"
        android:fontFamily="@font/iransans"
        android:text="@string/Receipt"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonReport"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPower" />

    <Button
        android:id="@+id/buttonReport"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:alpha="1"
        android:drawableTop="@drawable/ic_key_report"
        android:fontFamily="@font/iransans"
        android:text="@string/Report"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSettings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonReceipt"
        app:layout_constraintTop_toBottomOf="@+id/buttonDevelop" />

    <Button
        android:id="@+id/buttonSettings"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginEnd="32dp"
        android:alpha="0.6"
        android:drawableTop="@drawable/ic_key_settings"
        android:fontFamily="@font/iransans"
        android:text="@string/Settings"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonReport"
        app:layout_constraintTop_toBottomOf="@+id/buttonConnect" />

    <Button
        android:id="@+id/buttonConnect"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginEnd="32dp"
        android:alpha="1"
        android:drawableTop="@drawable/ic_key_net"
        android:fontFamily="@font/iransans"
        android:text="@string/Net"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/buttonSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonDevelop"
        app:layout_constraintTop_toBottomOf="@+id/buttonHide" />

    <Button
        android:id="@+id/buttonTare"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:drawableTop="@drawable/ic_key_tare"
        android:fontFamily="@font/iransans"
        android:text="@string/Tare"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/buttonPower"
        app:layout_constraintEnd_toStartOf="@+id/buttonShow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />

    <Button
        android:id="@+id/buttonShow"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:drawableTop="@drawable/ic_key_show"
        android:fontFamily="@font/iransans"
        android:text="@string/Show"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/buttonDevelop"
        app:layout_constraintEnd_toStartOf="@+id/buttonHide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonTare"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />

    <Button
        android:id="@+id/buttonHide"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:drawableTop="@drawable/ic_key_hide"
        android:fontFamily="@font/iransans"
        android:text="@string/Hide"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/buttonConnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonShow"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />


    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPanelBackground"
        android:gravity="center"
        android:text="@string/Weight"
        android:textAlignment="center"
        android:textColor="@color/colorPanelText"
        android:textSize="56sp"
        android:textStyle="bold"
        android:fontFamily="@font/vazircode"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:backgroundTint="@color/colorPanelBackground"
        android:gravity="center"
        android:text="@string/Message"
        android:textAlignment="center"
        android:textColor="@color/colorPanelText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/vazircode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeight" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/pu850app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_pand" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageViewUserIconCard"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textViewSerialNumber"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSerialNumber"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:cardCornerRadius="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-2dp"
        android:elevation="0dp">

        <ImageView
            android:id="@+id/imageViewUserIcon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:srcCompat="@drawable/ic_icon_user"
            app:tint="@color/colorButtonForeground"
            android:background="@color/colorButtonBackground"
            android:padding="4dp"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iransans"
        android:paddingVertical="4dp"
        android:paddingStart="8dp"
        android:paddingEnd="12dp"
        android:text="@string/username"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/imageViewUserIconCard"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewUserIconCard"
        app:layout_constraintStart_toEndOf="@+id/imageViewUserIconCard"
        />

    <TextView
        android:id="@+id/textViewAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="ver"
        android:textColor="@color/colorGrayText"
        app:layout_constraintBottom_toBottomOf="@+id/textViewServerAddr"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
        app:layout_constraintTop_toTopOf="@+id/textViewServerAddr" />

    <ImageView
        android:id="@+id/imageViewIconConnection"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewServerAddr"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textViewServerAddr"
        app:srcCompat="@drawable/ic_icon_wifi" />

    <TextView
        android:id="@+id/textViewSerialNumber"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/iransans"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/SN"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorGrayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/textViewKg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/iransans"
        android:text="Kg"
        android:textAlignment="center"
        android:textColor="@color/colorPanelText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWeight"
        app:layout_constraintEnd_toEndOf="@+id/textViewWeight" />

    <ImageView
        android:id="@+id/imageViewPrintPaper"
        android:layout_width="16dp"
        android:layout_height="300dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage"
        tools:layout_editor_absoluteX="0dp"
        android:adjustViewBounds="true"
        android:translationZ="90dp" />

</androidx.constraintlayout.widget.ConstraintLayout>